--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,21 +40,23 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding-top: 10px;
+  text-align: right;
 }
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
@@ -67,5 +69,6 @@ textarea{
 
 .saveBtn i:hover {
   font-size: 20px;
+  color: black;
   transition: all .3s ease-in-out;
 }
