updated currentDate function to be more optimized using jQuery; added additional ids for localStorage utilization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
+.saveBtn:hover i {
   font-size: 20px;
   color: black;
   transition: all .3s ease-in-out;
