--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,8 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+  color: black;
+  font-weight: bold;
 }
 
 .time-block{
@@ -46,17 +48,14 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: black;
 }
 
 .saveBtn {
